--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,22 +2,25 @@
 name = "freshfetch"
 version = "0.2.0"
 authors = ["K4rakara <jack@insertdomain.name>"]
-edition = "2018"
+edition = "2021"
 build = "./src/build.rs"
 
 [dependencies]
-chrono = "0.4.13"
-cmd_lib = "1.3.0"
-cmd_lib_core = "0.4.0"
+chrono = "0.4.31"
+
 lazy_static = "1.4.0"
 regex = "1.3.9"
-sysinfo = "0.20.5"
+sysinfo = "0.30.7"
 term_size = "0.3.2"
 uname = "0.1.1"
 users = "0.11.0"
+dirs = "4.0.0"
+viuer = "0.7.1"
+image = "0.24.7"
 
 [dependencies.clap]
-version = "2.33.3"
+version = "4.4.18"
+features = ["derive"]
 
 [dependencies.mlua]
 version = "0.6.6"
