--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 build = "./src/build.rs"
 
 [dependencies]
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ["serde"] }
 
 lazy_static = "1.4.0"
 regex = "1.3.9"
@@ -18,6 +18,8 @@ dirs = "4.0.0"
 viuer = "0.7.1"
 image = "0.24.7"
 rayon = "1.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.clap]
 version = "4.4.18"
